SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the name of the approver to whom the record will be routed for approval in Flow Orchestration. The value is sourced from sample master data, but users can also provide it during record creation.</description>
    <inlineHelpText>Fetched from sample master data for approval; can also be set manually when creating the record.</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>