SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <description>Holds the name of the approver to whom the record will be sent for approval in Flow Orchestration. The value is sourced from sample master data.[Not visible on layout]</description>
    <label>Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>