SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <description>SSP-176 SS2-T109 Batch Number</description>
    <label>Batch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>