SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <description>SS2-T192 - A field has been created to support Proforma Invoice generation using Conga Composer. This field is populated via a before-save flow on the Order Item object, which retrieves data from the related Product Plant Data</description>
    <inlineHelpText>Auto-filled from Product Plant Data for Proforma Invoice Generation</inlineHelpText>
    <label>Commodity</label>
    <length>17</length>
    <type>Text</type>
</CustomField>