SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Country_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Origin__c</fullName>
    <description>SS2-T192 - A new field has been added to support Proforma Invoice generation via Conga Composer. It is auto-populated through a before-save flow on the Order Item, pulling the 3-character Country ISO Code from the related Product Plant Data</description>
    <inlineHelpText>ISO Country Code (3 letters), auto-filled for Proforma Invoice from Product Plant Data</inlineHelpText>
    <label>Country Of Origin</label>
    <length>3</length>
    <type>Text</type>
</CustomField>