SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Default_Product_Used__c.field-meta.xml
<CustomField>
    <fullName>Default_Product_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For sample order check if the default product is chose then make it true</description>
    <label>Default Product Used</label>
    <type>Checkbox</type>
</CustomField>