SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <description>Delivery Status</description>
    <inlineHelpText>Update to be sent by Enorica and S4 for respectively Orders. For CRM Samples - this will be manually updated</inlineHelpText>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>In Process</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Dispatched</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>