SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Estimated_Stock__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Stock__c</fullName>
    <description>Field to store the estimated stock at the time of OrderItem creation from Product Stock data - Stock Level.</description>
    <inlineHelpText>Available stock level at the time of order product creation.</inlineHelpText>
    <label>Estimated Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>