SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Int_Incoterms__c.field-meta.xml
<CustomField>
    <fullName>Int_Incoterms__c</fullName>
    <description>It is used only for outbound integration.</description>
    <formula>TEXT(Order.IncoTerms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is used only for outbound integration.</inlineHelpText>
    <label>Int Incoterms</label>
    <type>Text</type>
</CustomField>