SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Int_Incoterms_Location__c.field-meta.xml
<CustomField>
    <fullName>Int_Incoterms_Location__c</fullName>
    <description>It is used only for outbound integration.</description>
    <formula>Order.IncoTerms_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is used only for outbound integration.</inlineHelpText>
    <label>Int Incoterms Location</label>
    <type>Text</type>
</CustomField>