SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Int_Order_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Int_Order_Product_Number__c</fullName>
    <description>Order Product Number (Removing Leading Zeros)</description>
    <formula>TEXT(VALUE(OrderItemNumber))</formula>
    <inlineHelpText>Only for Integration - Order Product Number (Removing Leading Zeros)</inlineHelpText>
    <label>Int Order Product Number</label>
    <type>Text</type>
</CustomField>