SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Int_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Int_Payment_Terms__c</fullName>
    <description>It is used only for outbound integration.</description>
    <formula>Order.Payment_Terms__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is used only for outbound integration.</inlineHelpText>
    <label>Int Payment Terms</label>
    <type>Text</type>
</CustomField>