SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Int_PlantId__c.field-meta.xml
<CustomField>
    <fullName>Int_PlantId__c</fullName>
    <description>It is used only for outbound integration.</description>
    <formula>Plant__r.Plant_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is used only for outbound integration.</inlineHelpText>
    <label>Int PlantId</label>
    <type>Text</type>
</CustomField>