SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Int_PONumber__c.field-meta.xml
<CustomField>
    <fullName>Int_PONumber__c</fullName>
    <description>It is used only for outbound integration.</description>
    <formula>Order.PoNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is used only for outbound integration.</inlineHelpText>
    <label>Int PONumber</label>
    <type>Text</type>
</CustomField>