SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Int_ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>Int_ProductDescription__c</fullName>
    <description>It is used only for outbound integration</description>
    <formula>Product2.Name</formula>
    <inlineHelpText>It is used only for outbound integration</inlineHelpText>
    <label>Int ProductDescription</label>
    <type>Text</type>
</CustomField>