SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Int_ProductId__c.field-meta.xml
<CustomField>
    <fullName>Int_ProductId__c</fullName>
    <description>It is used only for outbound integration.</description>
    <formula>Product2.Product_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is used only for outbound integration.</inlineHelpText>
    <label>Int ProductId</label>
    <type>Text</type>
</CustomField>