SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Int_QuantityUoM_ISO__c.field-meta.xml
<CustomField>
    <fullName>Int_QuantityUoM_ISO__c</fullName>
    <description>Only for Interface - UoM ISO Code</description>
    <formula>Quantity_UoM__r.UOM_Code__c</formula>
    <inlineHelpText>Only for Interface - UoM ISO Code</inlineHelpText>
    <label>Int QuantityUoM(ISO)</label>
    <type>Text</type>
</CustomField>