SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Int_QuantityUOMName__c.field-meta.xml
<CustomField>
    <fullName>Int_QuantityUOMName__c</fullName>
    <description>It is used only for outbound integration (Internal UoM Code)</description>
    <formula>Quantity_UoM__r.Internal_UoM_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is used only for outbound integration (Internal UoM Code)</inlineHelpText>
    <label>Int QuantityUOMName</label>
    <type>Text</type>
</CustomField>