SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Is_Updated_From_Apex__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated_From_Apex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inc 162773- Hidden checkbox to check if record updated from Apex or UI</description>
    <label>Is Updated From Apex?</label>
    <type>Checkbox</type>
</CustomField>