SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Planned_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Shipping_Date__c</fullName>
    <description>SSP-176 SS2-T109 Planned Shipping Date for the Current Product in Order</description>
    <label>Planned Shipping Date</label>
    <type>Date</type>
</CustomField>