SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Positive_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Positive_Feedback__c</fullName>
    <description>SSP-176 SS2-T109 To Capture Positive Type of Feedback</description>
    <label>Positive Feedback</label>
    <type>TextArea</type>
</CustomField>