SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Problem_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Problem_Feedback__c</fullName>
    <description>SSP-176 SS2-T109 To Capture Problems as feedback on current Order</description>
    <label>Problem Feedback</label>
    <type>TextArea</type>
</CustomField>