SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Quantity_UoM__c.field-meta.xml
<CustomField>
    <fullName>Quantity_UoM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SSP-176 SS2-T109 Lookup to Unit of Measure Object</description>
    <label>Quantity UoM</label>
    <referenceTo>UoM_Std_Data__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>