SynProdGITV1/force-app/main/default/objects/OrderItem/fields/S4_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>S4_Item_Category__c</fullName>
    <description>SSP-176 SS2-T109 Product Category in S4</description>
    <label>S4 Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Item_Category</valueSetName>
    </valueSet>
</CustomField>