SynProdGITV1/force-app/main/default/objects/OrderItem/fields/S4_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>S4_Order_Type__c</fullName>
    <description>SSP-176 SS2-T109 Order type in S4 Hana</description>
    <label>S4 Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZSAM</fullName>
                <label>ZSAM - S4 Sample Order</label>
            </value>
            <value>
                <fullName>ZBFD</fullName>
                <label>ZBFD - S4 FoC Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>