SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Sales_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SSP-176 SS2-T109 Sales Orgnization for the Order</description>
    <label>Sales Organisation</label>
    <referenceTo>Sales_Org_Data__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>