SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Salesforce_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Order_Type__c</fullName>
    <description>SSP-176 SS2-T109 Order type in Salesforce</description>
    <label>Salesforce Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZSLS</fullName>
                <label>ZSLS - Enorica &amp; Lab Sample Order</label>
            </value>
            <value>
                <fullName>ZPLS</fullName>
                <label>ZPLS - S4 Sample Order</label>
            </value>
            <value>
                <fullName>ZOR</fullName>
                <label>ZOR - S4 Sales Order</label>
            </value>
            <value>
                <fullName>ZCRM</fullName>
                <label>ZCRM - CRM Samples</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>