SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Sample_Item_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Sample_Item_Approval_Status__c</fullName>
    <description>SSP-176 SS2-T109 Approval Status of Product</description>
    <label>Sample Item Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>In Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>