SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Sample_Master_Matrix_Data__c.field-meta.xml
<CustomField>
    <fullName>Sample_Master_Matrix_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Sample Master Matrix data record</description>
    <label>Sample Master Matrix Data</label>
    <referenceTo>Sample_Master_Matrix_Data__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>