SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date__c</fullName>
    <description>SSP-176 SS2-T109 Date on which Product will be shipeed for the current Order</description>
    <label>Shipping Date</label>
    <type>Date</type>
</CustomField>