SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Stock_Availability__c.field-meta.xml
<CustomField>
    <fullName>Stock_Availability__c</fullName>
    <description>SSP-176 SS2-T109 Status of Stock when the Product was added into Product</description>
    <label>Stock Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
                <label>In Stock</label>
            </value>
            <value>
                <fullName>NOK</fullName>
                <label>Out of Stock</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>