SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Technical_Info_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Technical_Info_Feedback__c</fullName>
    <description>SSP-176 SS2-T109 To Capture Technical Info</description>
    <label>Technical Info Feedback</label>
    <type>TextArea</type>
</CustomField>