SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Total_Price_Internal__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Internal__c</fullName>
    <description>Total Price for internal calculation - this will be passed from SAP ERP. This will be used to calculate the Unit Price</description>
    <inlineHelpText>This will be passed from SAP ERP via API. This will be used to calculate the Unit Price</inlineHelpText>
    <label>Total Price (Internal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>