SynProdGITV1/force-app/main/default/objects/OrderItem/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>SSP-176 SS2-T109 - Tracking Number for current Product of the Order</description>
    <label>Tracking Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>