SynProdGITV1/force-app/main/default/objects/OrderItem/fields/TrackingURL__c.field-meta.xml
<CustomField>
    <fullName>TrackingURL__c</fullName>
    <description>SSP-176 SS2-T109 Tracking URL for product or Order</description>
    <label>Tracking URL</label>
    <type>Url</type>
</CustomField>